--- a/css/amp.css
+++ b/css/amp.css
@@ -696,9 +696,9 @@ i-amphtml-video-mask, i-amp-video-mask {
   transition: background-color 1s;
 }
 
-.i-amphtml-dockable-video > video.i-amphtml-dockable-video-minimizing,
-.i-amphtml-dockable-video > iframe.i-amphtml-dockable-video-minimizing {
-  position: fixed;
+.i-amphtml-dockable-video-minimizing > video,
+.i-amphtml-dockable-video-minimizing > iframe{
+  position: fixed !important;
   height: auto;
   overflow: hidden;
   z-index: 16;
@@ -711,6 +711,12 @@ i-amphtml-video-mask, i-amp-video-mask {
   min-width: initial !important;
   min-height: initial !important;
   margin: initial !important;
+}
+
+.i-amphtml-dockable-video-minimizing amp-custom-ctrls.amp-custom-ctrls-minimal {
+  z-index: 16;
+  border-radius: 6px;
+  position: fixed !important;
 }
 
 /**
@@ -854,8 +860,10 @@ amp-custom-ctrls-floating:not(.multiple)  {
 }
 
 amp-custom-ctrls-floating amp-custom-ctrls-playpause {
-  width: 48px;
-  height: 48px;
+  width: 100%;
+  height: 100%;
+  padding: 15px;
+  box-sizing: border-box;
 }
 
 amp-custom-ctrls-bar-wrapper {
@@ -873,31 +881,31 @@ amp-custom-ctrls-mini-wrapper {
   display: none;
 }
 
-/* Light theme */
+/* Custom Controls Light theme */
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-bg {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-bg {
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAADICAQAAABozPh9AAAAbElEQVQoz62TwQ7AIAhDnx33/f8n7ht22C4mLkGZGC9NoQWJgfIUEIDRY0qrg4oK+oaxz/WbZf4hBwpmdrUKa1tOoVrm1ZUwtmizLz/Bnn6LOas/3sA4MjsUb1Nqw35Z7z56EF+ecYJxg3HBCwTCBp+nLpJ4AAAAAElFTkSuQmCC');
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-progress-time {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-progress-time {
   color: black;
   text-shadow: 0px 0px 20px rgba(255, 255, 255, .5);
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-scrubber {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-scrubber {
   background: black;
   box-shadow: 0px 0px 20px rgba(255, 255, 255, .25);
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-scrubber:active {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-scrubber:active {
   box-shadow: 0px 0px 20px 5px rgba(255, 255, 255, .6);
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-current-bar {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-current-bar {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-floating:not(.multiple) {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-floating:not(.multiple) {
   box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
   background: rgba(255, 255, 255, 0.8);
 }
@@ -939,68 +947,61 @@ amp-custom-ctrls-icon.amp-custom-ctrls-icon-fullscreen {
 }
 
 /* Custom controls light icons */
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-icon {
-  width: 100%;
-  height: 100%;
-  display: block;
-  background-size: 100%;
-  background-repeat: no-repeat;
-}
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-play {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-play {
   background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" fill="#000000" width="24" height="24" viewbox="0 0 24 24" style="filter:url(#i-amphtml-svg-shadow)"><path d="M8 5v14l11-7z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>');
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-pause {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-pause {
   background-image: url('data:image/svg+xml;utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-mute {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-mute {
   background-image: url('data:image/svg+xml;utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-volume-max {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-volume-max {
   background-image: url('data:image/svg+xml;utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-shadow {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-shadow {
   width: 0 !important;
   height: 0 !important;
   visibility: hidden;
   background-image: url('data:image/svg+xml;utf-8,<svg fill="#FFFFFF" height="0" viewBox="0 0 24 24" width="0" xmlns="http://www.w3.org/2000/svg"><defs><filter id="i-amphtml-svg-shadow"><feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="rgba(0,0,0,0.4)" /></filter></defs></svg>')
 }
 
-amp-custom-ctrls.light:not(.minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-fullscreen {
+amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-fullscreen {
   background-image: url('data:image/svg+xml;utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/></svg>')
 }
 
-/* Minimal Controls */
+/* Custom Controls - Minimal Controls */
 
-amp-custom-ctrls.minimal {
+amp-custom-ctrls.amp-custom-ctrls-minimal {
   padding: 0px;
   width: 100%;
   height: 100%;
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-bg {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-bg {
   display: none;
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-bar-wrapper {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-bar-wrapper {
   padding: 0px;
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-floating {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-floating {
   display: none;
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-mini-wrapper {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-mini-wrapper {
   width: 100%;
   height: 100%;
   display: flex;
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-mini {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-mini {
   width: 100%;
   height: 100%;
   display: flex;
@@ -1009,46 +1010,42 @@ amp-custom-ctrls.minimal amp-custom-ctrls-mini {
   background: rgba(0, 0, 0, 0.3);
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-playpause,
-amp-custom-ctrls.minimal amp-custom-ctrls-volume,
-amp-custom-ctrls.minimal amp-custom-ctrls-fullscreen {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-playpause,
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-volume,
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-fullscreen {
   height: auto;
   flex-grow: 1;
   width: 30%;
   max-width: 80px;
 }
 
-amp-custom-ctrls.minimal  amp-custom-ctrls-mute {
+amp-custom-ctrls.amp-custom-ctrls-minimal  amp-custom-ctrls-mute {
   width: 100%;
   height: 100%;
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-scrubber {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-scrubber {
   display: none;
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-progress-bar {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-progress-bar {
   width: 100%;
   position: absolute;
   bottom: 0;
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-total-bar {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-total-bar {
   height: 8px;
   border-radius: 0px;
   background: rgba(255, 255, 255, 0.6);
 }
 
-amp-custom-ctrls.minimal.white amp-custom-ctrls-total-bar {
-  background: rgba(0, 0, 0, 0.6);
-}
-
-amp-custom-ctrls.minimal amp-custom-ctrls-current-bar {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-current-bar {
   height: 8px;
   border-radius: 0px;
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-scrubber {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-scrubber {
   width: 16px;
   height: 16px;
   margin-top: -5px;
@@ -1056,10 +1053,80 @@ amp-custom-ctrls.minimal amp-custom-ctrls-scrubber {
   box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.2);
 }
 
-amp-custom-ctrls.minimal amp-custom-ctrls-bar {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-bar {
   display: none;
 }
 
+/**
+ * Custom Controls - Hidden
+ */
+
+amp-custom-ctrls.amp-custom-ctrls-hidden amp-custom-ctrls-mini {
+  display: none;
+}
+
+amp-custom-ctrls.amp-custom-ctrls-hidden amp-custom-ctrls-bar-wrapper {
+  display: none;
+}
+
+amp-custom-ctrls.amp-custom-ctrls-hidden amp-custom-ctrls-bg {
+  display: none;
+}
+
+amp-custom-ctrls.amp-custom-ctrls-hidden amp-custom-ctrls-floating {
+  display: none;
+}
+
+/**
+ * Custom Controls - Loading spinner
+ */
+amp-custom-ctrls-floating.amp-custom-ctrls-loading::before {
+ content: '.';
+ display: block;
+ font-size: 10px;
+ position: absolute;
+ border-top: 4px solid rgba(255, 255, 255, 0.2);
+ border-right: 4px solid rgba(255, 255, 255, 0.2);
+ border-bottom: 4px solid rgba(255, 255, 255, 0.2);
+ border-left: 4px solid rgb(0, 0, 0);
+ animation: i-amp-html-custom-ctrls-loading 1.1s infinite linear;
+ border-radius: 50%;
+ width: 100%;
+ height: 100%;
+}
+
+amp-custom-ctrls-floating.amp-custom-ctrls-loading::before {
+ content: '';
+ display: block;
+ font-size: 10px;
+ position: absolute;
+ border-top: 4px solid rgba(255, 255, 255, 0.2);
+ border-right: 4px solid rgba(255, 255, 255, 0.2);
+ border-bottom: 4px solid rgba(255, 255, 255, 0.2);
+ border-left: 4px solid rgb(0, 0, 0);
+ animation: i-amp-html-custom-ctrls-loading 1.1s infinite linear;
+ border-radius: 50%;
+ width: 100%;
+ height: 100%;
+}
+
+amp-custom-ctrls.light amp-custom-ctrls-floating.amp-custom-ctrls-loading::before {
+ border-top: 4px solid rgba(0, 0, 0, 0.2);
+ border-right: 4px solid rgba(0, 0, 0, 0.2);
+ border-bottom: 4px solid rgba(0, 0, 0, 0.2);
+ border-left: 4px solid rgb(255, 255, 255);
+}
+
+@keyframes i-amp-html-custom-ctrls-loading {
+ 0% {
+   -webkit-transform: rotate(0deg);
+   transform: rotate(0deg);
+ }
+ 100% {
+   -webkit-transform: rotate(360deg);
+   transform: rotate(360deg);
+ }
+}
 
 /**
  * amp-accordion to avoid FOUC.
