--- a/css/amp.css
+++ b/css/amp.css
@@ -755,10 +755,7 @@ amp-custom-ctrls-bar {
   z-index: 2;
 }
 
-amp-custom-ctrls-volume,
-amp-custom-ctrls-mute,
-amp-custom-ctrls-fullscreen,
-amp-custom-ctrls-playpause {
+amp-custom-ctrls-icon-wrapper {
   width: 24px;
   height: 24px;
   display: inline-block;
@@ -766,17 +763,16 @@ amp-custom-ctrls-playpause {
   cursor: pointer;
 }
 
-amp-custom-ctrls-volume,
-amp-custom-ctrls-mute,
-amp-custom-ctrls-fullscreen,
-amp-custom-ctrls-playpause,
-amp-custom-ctrls-progress-time {
+amp-custom-ctrls-icon-wrapper,
+amp-custom-ctrls-progress-time,
+amp-custom-ctrls-scrubber {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  opacity: 0.85;
 }
 
 amp-custom-ctrls-volume, amp-custom-ctrls-progress-time {
@@ -837,8 +833,8 @@ amp-custom-ctrls-scrubber {
 amp-custom-ctrls-scrubber:active {
   width: 18px;
   height: 18px;
-  margin-top: -9px;
-  margin-left: -9px;
+  margin-top: -4px;
+  margin-left: -8px;
   box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, .6);
 }
 
@@ -850,7 +846,7 @@ amp-custom-ctrls-floating:not(.multiple)  {
   left: 50%;
   margin-top: -40px;
   margin-left: -40px;
-  background: rgba(0, 0, 0, .8);
+  background: rgba(0, 0, 0, .75);
   box-shadow: 0px 0px 20px 5px rgba(0,0,0,.25);
   border-radius: 50%;
   display: flex;
@@ -859,7 +855,7 @@ amp-custom-ctrls-floating:not(.multiple)  {
   z-index: 1;
 }
 
-amp-custom-ctrls-floating amp-custom-ctrls-playpause {
+amp-custom-ctrls-floating amp-custom-ctrls-icon-wrapper {
   width: 100%;
   height: 100%;
   padding: 15px;
@@ -888,12 +884,12 @@ amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-bg {
 }
 
 amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-progress-time {
-  color: black;
+  color: #000000;
   text-shadow: 0px 0px 20px rgba(255, 255, 255, .5);
 }
 
 amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-scrubber {
-  background: black;
+  background: #000000;
   box-shadow: 0px 0px 20px rgba(255, 255, 255, .25);
 }
 
@@ -907,7 +903,7 @@ amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-current-b
 
 amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-floating:not(.multiple) {
   box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, .75);
 }
 
 /* Custom controls dark icons */
@@ -920,59 +916,59 @@ amp-custom-ctrls-icon {
 }
 
 amp-custom-ctrls-icon.amp-custom-ctrls-icon-play {
-  background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" width="24" height="24" viewbox="0 0 24 24" style="filter:url(#i-amphtml-svg-shadow)"><path d="M8 5v14l11-7z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>');
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" fill="#FFFFFF" width="24" height="24" viewbox="0 0 24 24" style="filter:url(#i-amphtml-svg-shadow)"><path d="M8 5v14l11-7z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>');
 }
 
 amp-custom-ctrls-icon.amp-custom-ctrls-icon-pause {
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
 amp-custom-ctrls-icon.amp-custom-ctrls-icon-mute {
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
 amp-custom-ctrls-icon.amp-custom-ctrls-icon-volume-max {
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
 amp-custom-ctrls-icon.amp-custom-ctrls-icon-shadow {
   width: 0 !important;
   height: 0 !important;
   visibility: hidden;
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#000000" height="0" viewBox="0 0 24 24" width="0" xmlns="http://www.w3.org/2000/svg"><defs><filter id="i-amphtml-svg-shadow"><feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="rgba(0,0,0,0.4)" /></filter></defs></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#000000" height="0" viewBox="0 0 24 24" width="0" xmlns="http://www.w3.org/2000/svg"><defs><filter id="i-amphtml-svg-shadow"><feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="rgba(0,0,0,0.4)" /></filter></defs></svg>')
 }
 
 amp-custom-ctrls-icon.amp-custom-ctrls-icon-fullscreen {
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/></svg>')
 }
 
 /* Custom controls light icons */
 
 amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-play {
-  background-image: url('data:image/svg+xml;utf-8,<svg xmlns="http://www.w3.org/2000/svg" fill="#000000" width="24" height="24" viewbox="0 0 24 24" style="filter:url(#i-amphtml-svg-shadow)"><path d="M8 5v14l11-7z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>');
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" fill="#000000" width="24" height="24" viewbox="0 0 24 24" style="filter:url(#i-amphtml-svg-shadow)"><path d="M8 5v14l11-7z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>');
 }
 
 amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-pause {
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
 amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-mute {
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
 amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-volume-max {
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
 amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-shadow {
   width: 0 !important;
   height: 0 !important;
   visibility: hidden;
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#FFFFFF" height="0" viewBox="0 0 24 24" width="0" xmlns="http://www.w3.org/2000/svg"><defs><filter id="i-amphtml-svg-shadow"><feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="rgba(0,0,0,0.4)" /></filter></defs></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#FFFFFF" height="0" viewBox="0 0 24 24" width="0" xmlns="http://www.w3.org/2000/svg"><defs><filter id="i-amphtml-svg-shadow"><feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="rgba(0,0,0,0.4)" /></filter></defs></svg>')
 }
 
 amp-custom-ctrls.light:not(.amp-custom-ctrls-minimal) amp-custom-ctrls-icon.amp-custom-ctrls-icon-fullscreen {
-  background-image: url('data:image/svg+xml;utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/></svg>')
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/></svg>')
 }
 
 /* Custom Controls - Minimal Controls */
@@ -1010,16 +1006,14 @@ amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-mini {
   background: rgba(0, 0, 0, 0.3);
 }
 
-amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-playpause,
-amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-volume,
-amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-fullscreen {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-icon-wrapper {
   height: auto;
   flex-grow: 1;
   width: 30%;
   max-width: 80px;
 }
 
-amp-custom-ctrls.amp-custom-ctrls-minimal  amp-custom-ctrls-mute {
+amp-custom-ctrls.amp-custom-ctrls-minimal amp-custom-ctrls-icon-wrapper.amp-custom-ctrls-mute {
   width: 100%;
   height: 100%;
 }
@@ -1080,30 +1074,15 @@ amp-custom-ctrls.amp-custom-ctrls-hidden amp-custom-ctrls-floating {
 /**
  * Custom Controls - Loading spinner
  */
-amp-custom-ctrls-floating.amp-custom-ctrls-loading::before {
- content: '.';
- display: block;
- font-size: 10px;
- position: absolute;
- border-top: 4px solid rgba(255, 255, 255, 0.2);
- border-right: 4px solid rgba(255, 255, 255, 0.2);
- border-bottom: 4px solid rgba(255, 255, 255, 0.2);
- border-left: 4px solid rgb(0, 0, 0);
- animation: i-amp-html-custom-ctrls-loading 1.1s infinite linear;
- border-radius: 50%;
- width: 100%;
- height: 100%;
-}
-
-amp-custom-ctrls-floating.amp-custom-ctrls-loading::before {
+amp-custom-ctrls-floating.amp-custom-ctrls-loading::after {
  content: '';
  display: block;
  font-size: 10px;
  position: absolute;
- border-top: 4px solid rgba(255, 255, 255, 0.2);
- border-right: 4px solid rgba(255, 255, 255, 0.2);
- border-bottom: 4px solid rgba(255, 255, 255, 0.2);
- border-left: 4px solid rgb(0, 0, 0);
+ border-top: 2px solid rgba(255, 255, 255, 0.2);
+ border-right: 2px solid rgba(255, 255, 255, 0.2);
+ border-bottom: 2px solid rgba(255, 255, 255, 0.2);
+ border-left: 2px solid rgb(0, 0, 0);
  animation: i-amp-html-custom-ctrls-loading 1.1s infinite linear;
  border-radius: 50%;
  width: 100%;
@@ -1111,10 +1090,10 @@ amp-custom-ctrls-floating.amp-custom-ctrls-loading::before {
 }
 
 amp-custom-ctrls.light amp-custom-ctrls-floating.amp-custom-ctrls-loading::before {
- border-top: 4px solid rgba(0, 0, 0, 0.2);
- border-right: 4px solid rgba(0, 0, 0, 0.2);
- border-bottom: 4px solid rgba(0, 0, 0, 0.2);
- border-left: 4px solid rgb(255, 255, 255);
+ border-top: 2px solid rgba(0, 0, 0, 0.2);
+ border-right: 2px solid rgba(0, 0, 0, 0.2);
+ border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+ border-left: 2px solid rgb(255, 255, 255);
 }
 
 @keyframes i-amp-html-custom-ctrls-loading {
