--- a/css/amp.css
+++ b/css/amp.css
@@ -721,7 +721,28 @@ i-amphtml-video-mask, i-amp-video-mask {
 
 /**
  * Custom Video Controls
+ *
+ * Custom controls are composed of three layers:
+ *  - Main controls bar
+ *    |""""""""""""""|
+ *    |      (▶︎)     |
+ *    | 0:00       ⇱ | <<
+ *    | ------------ | <<
+ *    """"""""""""""""
+ *  - Minimized controls (shown when video is small or docked)
+ *    |""""""""""""""|
+ *    |              |
+ *    |   ▌︎▌︎  ▶︎  ⇱   | <<
+ *    |..........____|
+ *    """"""""""""""""
+ *  - Floating main action (usually play/pause)
+ *    |""""""""""""""|
+ *    |      (▶︎)     | <<
+ *    | 0:00       ⇱ |
+ *    | ------------ |
+ *    """"""""""""""""
  */
+
 amp-custom-controls {
   position: absolute;
   top: 0;
@@ -730,6 +751,7 @@ amp-custom-controls {
   width: 100%;
 }
 
+/* Background shown behind custom controls (white/black gradient) */
 amp-custom-controls-bg {
   position: absolute;
   bottom: 0;
@@ -741,9 +763,10 @@ amp-custom-controls-bg {
   background-size: 1px 100px;
   background-position: bottom;
   background-repeat-y: no-repeat;
-  z-index: 1;
 }
 
+/* Main controls bar (usually contains progress time,
+ fullscreen and volume controls) */
 amp-custom-controls-bar {
   display: flex;
   padding: 10px;
@@ -755,6 +778,7 @@ amp-custom-controls-bar {
   z-index: 2;
 }
 
+/* Every button/icon is wrapped in an amp-custom-controls-icon-wrapper */
 amp-custom-controls-icon-wrapper {
   width: 24px;
   height: 24px;
@@ -872,31 +896,31 @@ amp-custom-controls-mini-wrapper {
   display: none;
 }
 
-/* Custom Controls Light theme */
+/* Custom Controls Light Theme */
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-bg {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-bg {
   background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAADICAQAAABozPh9AAAAbElEQVQoz62TwQ7AIAhDnx33/f8n7ht22C4mLkGZGC9NoQWJgfIUEIDRY0qrg4oK+oaxz/WbZf4hBwpmdrUKa1tOoVrm1ZUwtmizLz/Bnn6LOas/3sA4MjsUb1Nqw35Z7z56EF+ecYJxg3HBCwTCBp+nLpJ4AAAAAElFTkSuQmCC');
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-progress-time {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-progress-time {
   color: #000000;
   text-shadow: 0px 0px 20px rgba(255, 255, 255, .5);
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-scrubber {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-scrubber {
   background: #000000;
   box-shadow: 0px 0px 20px rgba(255, 255, 255, .25);
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-scrubber:active {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-scrubber:active {
   box-shadow: 0px 0px 20px 5px rgba(255, 255, 255, .6);
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-current-bar {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-current-bar {
   background-color: rgba(0, 0, 0, 0.8);
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-floating {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-floating {
   box-shadow: 0px 0px 20px 5px rgba(0, 0, 0, 0.1);
   background: rgba(255, 255, 255, .75);
 }
@@ -939,27 +963,27 @@ amp-custom-controls-icon.amp-custom-controls-icon-fullscreen {
 
 /* Custom controls light icons */
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-play {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-play {
   background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" fill="#000000" width="24" height="24" viewbox="0 0 24 24" style="filter:url(#i-amphtml-svg-shadow)"><path d="M8 5v14l11-7z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>');
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-pause {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-pause {
   background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-mute {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-mute {
   background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M16.5 12c0-1.77-1.02-3.29-2.5-4.03v2.21l2.45 2.45c.03-.2.05-.41.05-.63zm2.5 0c0 .94-.2 1.82-.54 2.64l1.51 1.51C20.63 14.91 21 13.5 21 12c0-4.28-2.99-7.86-7-8.77v2.06c2.89.86 5 3.54 5 6.71zM4.27 3L3 4.27 7.73 9H3v6h4l5 5v-6.73l4.25 4.25c-.67.52-1.42.93-2.25 1.18v2.06c1.38-.31 2.63-.95 3.69-1.81L19.73 21 21 19.73l-9-9L4.27 3zM12 4L9.91 6.09 12 8.18V4z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-volume-max {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-volume-max {
   background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"></path><path d="M0 0h24v24H0z" fill="none"></path></svg>')
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-fullscreen {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-fullscreen {
   background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/></svg>')
 }
 
-amp-custom-controls.amp-custom-controls-light:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-shadow {
+amp-custom-controls.amp-custom-controls-light-skin:not(.amp-custom-controls-minimal) amp-custom-controls-icon.amp-custom-controls-icon-shadow {
   background-image: url('data:image/svg+xml;charset=utf-8,<svg fill="#FFFFFF" height="0" viewBox="0 0 24 24" width="0" xmlns="http://www.w3.org/2000/svg"><defs><filter id="i-amphtml-svg-shadow"><feDropShadow dx="0" dy="0" stdDeviation="3" flood-color="rgba(0,0,0,0.4)" /></filter></defs></svg>')
 }
 
@@ -1081,7 +1105,7 @@ amp-custom-controls-floating.amp-custom-controls-loading::after {
  height: 100%;
 }
 
-amp-custom-controls.amp-custom-controls-light amp-custom-controls-floating.amp-custom-controls-loading::before {
+amp-custom-controls.amp-custom-controls-light-skin amp-custom-controls-floating.amp-custom-controls-loading::before {
  border-top: 2px solid rgba(0, 0, 0, 0.2);
  border-right: 2px solid rgba(0, 0, 0, 0.2);
  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
