attempts to make affordance

--- a/extensions/amp-compare-slider/0.1/amp-compare-slider.css
+++ b/extensions/amp-compare-slider/0.1/amp-compare-slider.css
@@ -57,6 +57,19 @@ amp-compare-slider {
   right: 0;
 }
 
+.dragHint {
+  height: 15px;
+  background-color: red;
+  width: 45px;
+  position: absolute;
+  right: 46%;
+  bottom: 50%;
+  margin: auto;
+  text-align: center;
+  display: inline-block;
+  z-index: 4;
+}
+
 i-amphtml-sizer {
   padding: 0px !important;
 }
