--- a/css/amp.css
+++ b/css/amp.css
@@ -605,13 +605,13 @@ i-amphtml-video-mask, i-amp-video-mask {
 .amp-video-eq {
   align-items: flex-end;
   border: transparent solid 7px;
-  bottom: 0px;
+  bottom: 0;
   display: flex;
   height: 12px;
   opacity: 0.8;
   overflow: hidden;
   position: absolute;
-  right: 0px;
+  right: 0;
   width: 20px;
   z-index: 1;
 }
