--- a/extensions/amp-ad/0.1/amp-ad.css
+++ b/extensions/amp-ad/0.1/amp-ad.css
@@ -70,3 +70,8 @@ amp-ad[data-a4a-upgrade-type="amp-ad-network-adsense-impl"] > iframe {
   min-width: 0;
 }
 
+amp-ad[data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"][height="fluid"] > iframe {
+  height: 100% !important;
+  width: 100% !important;
+  position: relative;
+}
