Removing setSytle in favor of using CSS; minor fixes.

--- a/extensions/amp-ad/0.1/amp-ad.css
+++ b/extensions/amp-ad/0.1/amp-ad.css
@@ -75,3 +75,7 @@ amp-ad[data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"][height="fluid"] 
   width: 100% !important;
   position: relative;
 }
+
+amp-ad[data-a4a-upgrade-type="amp-ad-network-doubleclick-impl"][height="fluid"] {
+  width: 100% !important;
+}
