adding muted to apm-story in beginning

--- a/extensions/amp-story/0.1/amp-story.css
+++ b/extensions/amp-story/0.1/amp-story.css
@@ -164,7 +164,7 @@ amp-story[standalone]:fullscreen {
 }
 
 .audio-playing[unmuted] .i-amphtml-story-mute-audio-control,
-.audio-playing:not([unmuted]) .i-amphtml-story-unmute-audio-control {
+.audio-playing[muted] .i-amphtml-story-unmute-audio-control {
   display: block;
 }
 
