fixing color value

--- a/extensions/amp-story/0.1/amp-story-user-overridable.css
+++ b/extensions/amp-story/0.1/amp-story-user-overridable.css
@@ -21,3 +21,8 @@
 .i-amphtml-story-grid-template-thirds {
   padding: 32px;
 }
+
+amp-story-grid-layer {
+  padding: 68px 32px 32px !important; /* 44 + 24 */
+}
+
