--- a/extensions/amp-story/0.1/amp-story-desktop.css
+++ b/extensions/amp-story/0.1/amp-story-desktop.css
@@ -33,6 +33,16 @@ amp-story[desktop] {
  left: 0;
 }
 
+.i-amphtml-story-background-overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  background-color: rgba(0,0,0,0.2);
+}
+
 .i-amphtml-story-background {
  position: absolute;
  top: 0;
