Add manual refresh screen.

--- a/extensions/amp-story/0.1/amp-story.css
+++ b/extensions/amp-story/0.1/amp-story.css
@@ -664,13 +664,20 @@ amp-story[standalone] .i-amphtml-story-developer-log {
   z-index: 999999;
 }
 
-.i-amphtml-story-experiment-error-icon {
-  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/></svg>');
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 64px;
-  margin: 0 auto 16px;
-  width: 64px;
+.i-amphtml-story-experiment-icon {
+  background-repeat: no-repeat !important;
+  background-size: cover !important;
+  height: 64px !important;
+  margin: 0 auto 16px !important;
+  width: 64px !important;
+}
+
+.i-amphtml-story-experiment-icon-error {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#FFFFFF"><path d="M0 0h24v24H0z" fill="none"/><path d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"/></svg>') !important;
+}
+
+.i-amphtml-story-experiment-icon-done {
+  background-image: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 24 24" fill="#FFFFFF"><path fill="none" d="M0 0h24v24H0z"/><path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"/></svg>') !important;
 }
 
 .i-amphtml-story-experiment-error button {
